--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,7 +13,11 @@
           <li></li>
           <li><a href="/car/add" class="nav-link px-2 text-secondary">Добавить машину</a></li>
           <li><a href="/employee/add" class="nav-link px-2 text-secondary">Добавить сотрудника</a></li>
+          <li><a href="/employee/employeeCarAdd" class="nav-link px-2 text-secondary">Добавить сотрудник-автомобиль</a></li>
         </ul>
+        <form style="alignment: right" th:action="@{/logout}" method="post">
+          <input type="submit" value="Sign Out"/>
+        </form>
       </div>
     </div>
   </header>
